# custom_colmap

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  install_cotracker.sh  install_glomap.sh  pyproject.toml  test.py
config/: baseline.yml  cinematic.yml  main.yml
config/matcher/: sparse.yml  tracking.yml
script/: download_ckpts.sh
scripts/: benchmark.sh  compile.sh  download_ckpts.sh  get_tracks.sh  merge_videos.py  run.sh  upload_mp4_wandb.py
scripts/data_preprocess/: cut_invalid_frames.py  sync_videos.py  video2frames.py
src/: main.py  main_multidyn.py  root_config.py
src/colmap/: database.py  h5_to_db.py  importer.py  read_write_model.py  traj2matches.py
src/config/: main.yml
src/libs/: h5_to_db.py  keypoint_detector.py  keypoint_matcher.py  pair_generator.py  read_model.py  read_write_model.py  retriever.py  tracking.py  traj2matches.py  trajectory.py
src/mapping/: mapper.py
src/matching/: __init__.py  keypoint_detector.py  keypoint_matcher.py  matcher.py  matcher_sparse.py  matcher_tracking.py  retriever.py  tracking.py
src/matching/sparse/: keypoint_detector.py  keypoint_matcher.py  mast3r_sparse.py
src/matching/tracking/: image_data.py  tracker.py  trajectory.py  union_find.py
src/matching/tracking/fast_class/: TrajectorySet.cpp
src/matching/tracking/optimize/: CMakeLists.txt
src/submodules/cotracker/: predictor.py
src/submodules/cotracker/datasets/: dataclass_utils.py  dr_dataset.py  kubric_movif_dataset.py  real_dataset.py  (+2 more)
src/visualization/: __init__.py  visualizer.py  visualizer_rerun.py  visualizer_viser.py
(+31 files in other folders)
