[project]
name = "custom_colmap"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.2"
dependencies = [
    "numpy",
    "omegaconf",
    "dacite",
    "jaxtyping",
    "pycolmap",
    "h5py",
    "tqdm",
    "pre-commit",
    # For LightGlue
    "torch>=1.9.1",
    "torchvision>=0.3",
    "opencv-python",
    "matplotlib",
    "kornia>=0.6.11",
    "flow-vis>=0.1",
    "tensorboard>=2.19.0",
    "scipy>=1.16.0",
    "wandb>=0.21.0",
    "beartype>=0.21.0",
]
